# faststream_overview

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  asyncapi.json  pyproject.toml
dev/: Makefile  set_env.sh
dev/docker/: docker-compose-kafka.yml  docker-compose-main.yml
src/: asgi.py  main.py  settings.py
src/data/: generate.py
src/fast_stream/custom/: app.py  asgi.py
src/fast_stream/custom/core/entities/: schemas.py
src/fast_stream/custom/core/services/: handlers.py  service.py
src/fast_stream/fastapi_integration/: app.py  run.py
src/fast_stream/multi/: app.py  asgi.py
src/fast_stream/simple/: app.py  main.py
src/tests/test_fastapi/: test_app.py
