[tool.poetry]
name = "FastStream overview"
version = "0.1.0"
description = "Example of works with FastStream framework"
authors = ["tg - @maxalxeev"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
faststream = {extras = ["cli", "kafka", "prometheus"], version = "^0.5.28"}
pydantic = "2.9.2"
pydantic-settings = "2.6.0"
granian = "1.6.1"
fastapi = "^0.115.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"

[tool.poetry.group.local.dependencies]
ruff = "^0.6.8"
pre-commit = "^3.8.0"
mypy = "^1.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = ["tests/",]
line-length = 120
target-version = "py312"

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
ignore_missing_imports = true
explicit_package_bases = true
plugins = [
    "pydantic.mypy",
]

[tool.pydantic-mypy]
follow_imports = "skip"
ignore_missing_imports=true
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
strict_optional = true